# Quaero

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  MANIFESTO.md  README.md  START_HERE.md  THIRD_PARTY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
UX/: index.html
apps/desktop/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/frontend/src/: main.tsx  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: evidence_consent.rs  evidence_ollama.rs  lib.rs  local_model.rs  main.rs  ollama.rs  store.rs
apps/desktop/src-tauri/src/commands/: chat.rs  evidence.rs  mod.rs  ping.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: chat.rs  citation_candidates.rs  domain.rs  evidence.rs  export.rs  hash.rs  lib.rs  persistence.rs  privacy.rs  verify.rs
crates/core/tests/: manual_dossier_invariants.rs  workspace_invariants.rs
docs/adr/: 0001-desktop-first-online-later.md  0002-tauri-rust-stack.md  0003-monorepo-isolated-modules.md  0004-agpl-and-third-party-reuse.md  0005-language-and-i18n.md  0006-design-system-and-visual-inspiration.md  0007-citation-of-source-extracts.md  0008-pratica-fascicolo-hierarchy.md  0009-document-provenance-graph.md  0010-frontend-stack.md  0011-tauri-security-and-core-boundary.md  0012-text-layer-extraction-in-renderer.md
docs/agents/: domain.md
docs/design/: issue-03-screen-spec.md  ux-research.md
docs/plans/: issue-02-skeleton.md  issue-03-cockpit-shell.md
(+67 files in other folders)
