[package]
name = "quaero-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "quaero_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
quaero-core = { path = "../../../crates/core" }
# Local Ollama provider only (#37): async HTTP to http://127.0.0.1:11434.
# default-features = false → no new TLS stack (localhost http needs none);
# `json` reuses serde_json (already present). reqwest 0.13 is already in the lock.
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"
